# basics

./: CMakeLists.txt  leapYear.cpp  milesToKilometers.cpp  quadraticFormula.cpp  switchCasePokedex.cpp  temperatureConversion.cpp  variableStory.cpp
ufoHangman/: ufo.cpp
