cmake_minimum_required(VERSION 3.21)
project(basics)

set(CMAKE_CXX_STANDARD 14)

add_executable(HelloWorld helloWorld.cpp)
add_executable(printTriangle printTriangle.cpp)
add_executable(variableStory variableStory.cpp)
add_executable(dataTypes dataTypes.cpp)
add_executable(temperatureConversion temperatureConversion.cpp)
add_executable(milesToKilometers milesToKilometers.cpp)
add_executable(quadraticFormula quadraticFormula.cpp)
add_executable(switchCasePokedex switchCasePokedex.cpp)
add_executable(leapYear leapYear.cpp)
add_executable(sortingHat sortingHat.cpp)